--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,11 @@
-[docker_servers]
+[basic]
 192.168.122.2
+#192.168.122.3
+#192.168.122.4
+
+[docker_servers]
 192.168.122.3
+192.168.122.4
 
 [docker_servers:vars]
 ansible_python_interpreter=auto_silent
