Add repository file

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,10 @@
 [basic]
 192.168.122.2
-#192.168.122.3
-#192.168.122.4
+192.168.122.3
+192.168.122.4
+
+[basic:vars]
+ansible_python_interpreter=auto_silent
 
 [docker_servers]
 192.168.122.3
