--- a/inventory.ini
+++ b/inventory.ini
@@ -1,14 +1,11 @@
-[basic]
+[all]
 192.168.122.2
 192.168.122.3
 192.168.122.4
 
-[basic:vars]
+[all:vars]
 ansible_python_interpreter=auto_silent
 
 [docker_servers]
 192.168.122.3
 192.168.122.4
-
-[docker_servers:vars]
-ansible_python_interpreter=auto_silent
