--- a/all.yaml
+++ b/all.yaml
@@ -56,3 +56,14 @@
       modprobe:
         name: ip_tables
         state: present
+
+    - name: Disable IPv6
+      become: yes
+      become_method: sudo
+      ansible.posix.sysctl:
+        name: net.ipv6.conf.all.disable_ipv6
+        sysctl_file: /etc/sysctl.d/local.conf
+        value: '1'
+        sysctl_set: yes
+        state: present
+        reload: yes
