--- a/inventory.ini
+++ b/inventory.ini
@@ -7,3 +7,9 @@ ansible_python_interpreter=auto_silent
 
 [docker_servers]
 192.168.122.4
+
+[mail_servers]
+192.168.122.4
+
+[debug_servers]
+192.168.122.86
