--- a/files/etc/ntp.conf
+++ b/files/etc/ntp.conf
@@ -1,3 +1,7 @@
-server ru.pool.ntp.org
-server europe.pool.ntp.org
-server pool.ntp.org
+#server ru.pool.ntp.org
+#server europe.pool.ntp.org
+#server pool.ntp.org
+server 0.ru.pool.ntp.org
+server 1.ru.pool.ntp.org
+server 2.ru.pool.ntp.org
+server 3.ru.pool.ntp.org
